# meTile

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  docs.yml
benchmarks/: benchutils.py  fft.py  gemm.py  gemm_splitk.py  layernorm.py  mlp.py  regression.py  rmsnorm.py  simdgroup_specialized_elementwise.py  softmax.py
dev/bench/: data.js
docs/: .buildinfo  Makefile  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/api/: reference.html  reference.rst
docs/examples/: fused-activations.html  fused-activations.rst  layernorm.html  layernorm.rst  matmul.html  matmul.rst  softmax.html  softmax.rst  vector-add.html  vector-add.rst
docs/getting-started/: first-kernel.html  first-kernel.rst  install.html  install.rst
docs/guide/: autotuning.html  autotuning.rst  language.html  language.rst  memory.html  memory.rst  tile-ops.html  tile-ops.rst
kernels/: __init__.py  fft.py  gemm.py  layernorm.py  mlp.py  reduce.py  rmsnorm.py  simdgroup_specialized_elementwise.py  softmax.py
metile/: __init__.py
metile/codegen/: msl_emitter.py
metile/compiler/: lowering.py  passes.py
metile/frontend/: autotune.py  kernel.py  tracing.py
metile/ir/: layout.py  metal_ir.py  printer.py  tile_ir.py  types.py
metile/runtime/: address_space.py  buffer.py  metal_device.py
tests/: test_address_space.py  test_fft.py  test_gemm.py  test_ir.py  test_layernorm.py  test_layout.py  test_rmsnorm.py  test_softmax.py
(+14 files in other folders)
